kubernetes/argocd/clusters/addons/software-base/istio-ingressgateway/gateway.yaml
# Shared Istio Gateway for all homelab services
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.home"
